--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,8 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/jquery.min.js')
+    script(src='/javascripts/main.js')
   body
     div
      span= comport
