--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,17 @@ body {
 a {
   color: #00B7FF;
 }
+#time {
+ padding-top:5px;
+ padding-top:5px;
+ width:40px;
+ font-weight:bold;
+}
+#timer {
+ float:right;
+ font-size:58px;
+ padding:20px;
+ margin:10px;
+ border:solid 1px grey;
+ border-radius:6px;
+}
